--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "cors": "^2.8.4",
+    "csurf": "^1.9.0"
   },
   "devDependencies": {
     "chalk": "^4.1.0",
